shiny-server 1.1.0
--------------------------------------------------------------------------------

* Added support for custom page templates -- exposing the ability to customize
  the static pages generated by Shiny Server for directory listings or errors.

* Bug fix: Restored compatibility with IE8 Standards Mode 

shiny-server 1.0.0
--------------------------------------------------------------------------------

* Additional reliability testing.

shiny-server 0.5.0
--------------------------------------------------------------------------------

* Added various quick-start configurations as described at: 
  http://rstudio.github.io/shiny-server/latest/#quick-start

shiny-server 0.4.2
--------------------------------------------------------------------------------

* BREAKING CHANGE: Deprecatedd `application` setting in favor of nested 
  ``location` blocks.

* Allow client to configure which network techniques should be used to connect
  to the server using the keyboard shortcut 'ctrl+shift+A'.

* Properly set working directory of spawned Shiny Processes to the associated
  application's directory to honor local .Renviron and family.

* Provide a logrotate configuration for /var/log/shiny-server.log where 
  logrotate is available.

* Various memory leak and stability improvements.

shiny-server 0.4.0
--------------------------------------------------------------------------------

* Use UNIX domain sockets for data transfer instead of TCP/IP for enhanced 
  security.

* Added scheduler and traffic direction which require shiny >= 0.6.0.99 to be
  compatible.

shiny-server 0.3.6
--------------------------------------------------------------------------------

* Support for node-webkit-agent (https://github.com/c4milo/node-webkit-agent).
  Use by setting DEBUG_PORT environment variable to a port number, then follow
  the instructions on the node-webkit-agent GitHub page under "Connecting to the