@@ -11,15 +11,19 @@
 #
 
 local({
-  # Expect that the following environment variables will be provided.
-  # SHINY_APP
-  # SHINY_PORT
-  # SHINY_GAID
-  # SHINY_SHARED_SECRET
-  # SHINY_SERVER_VERSION
-  # WORKER_ID
-  # MIN_R_VERSION
-  # MIN_SHINY_VERSION
+  # Read config directives from stdin and put them in the environment.
+  fd = file('stdin')
+  input <- readLines(fd)
+  Sys.setenv(
+  SHINY_APP=input[1],
+  SHINY_PORT=input[2],
+  SHINY_GAID=input[3],
+  SHINY_SHARED_SECRET=input[4],
+  SHINY_SERVER_VERSION=input[5],
+  WORKER_ID=input[6],
+  MIN_R_VERSION=input[7],
+  MIN_SHINY_VERSION=input[8])
+  close(fd)
 
   options(shiny.sharedSecret = Sys.getenv('SHINY_SHARED_SECRET'))
 
