@@ -173,16 +173,6 @@ var AppWorker = function(appSpec, endpoint, logStream, workerId) {
       self.$proc = child_process.spawn(executable, args, {
         stdio: ['pipe', 'pipe', logStream],
         cwd: appSpec.appDir,
-        env: {
-          SHINY_APP: appSpec.appDir,
-          SHINY_PORT: endpoint.getAppWorkerPort(),
-          SHINY_GAID: (appSpec.settings.gaTrackingId || ''),
-          SHINY_SHARED_SECRET: endpoint.getSharedSecret(),
-          SHINY_SERVER_VERSION: SHINY_SERVER_VERSION,
-          WORKER_ID: workerId,
-          MIN_R_VERSION: MIN_R_VERSION.join('.'),
-          MIN_SHINY_VERSION: MIN_SHINY_VERSION.join('.')
-        },
         detached: true  // So that we can send SIGINT not just to su but to the
                         // R process that it spawns as well
       });
@@ -194,6 +184,16 @@ var AppWorker = function(appSpec, endpoint, logStream, workerId) {
         logger.warn("Unable to write to Shiny process. Attempting to kill it.");
         self.kill();
       });
+      self.$proc.stdin.end(
+        appSpec.appDir + '\n' +
+        endpoint.getAppWorkerPort() + '\n' +
+        (appSpec.settings.gaTrackingId || '') + '\n' +
+        endpoint.getSharedSecret() + '\n' +
+        SHINY_SERVER_VERSION + '\n' + 
+        workerId + '\n' + 
+        MIN_R_VERSION.join('.') + '\n' + 
+        MIN_SHINY_VERSION.join('.') + '\n'
+      );
       self.$proc.stdout.pipe(split()).on('data', function(line){
         var match = null;
         if (line.match(/^Starting Shiny with process ID: '(\d+)'$/)){
