@@ -4,6 +4,9 @@ shiny-server 1.1.0
 * Added support for custom page templates -- exposing the ability to customize
   the static pages generated by Shiny Server for directory listings or errors.
 
+* Leverage bash when spawning Shiny processes on behalf of other users, as in 
+  'user_apps' mode.
+
 * Bug fix: Restored compatibility with IE8 Standards Mode 
 
 shiny-server 1.0.0
